[metadata]
name = verible_py
version = v0.0-3426
description = Python wrapper around invoking verible (https://chipsalliance.github.io/verible/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chipsalliance/verible
author = Henner Zeller
author_email = h.zeller@acm.org
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3426-gac4a37d8/verible-v0.0-3426-gac4a37d8-linux-static-x86_64.tar.gz
    sha256 = 7f159a3c9515db9077059aa0bba48d642c0a9700f0423395be96a4545c2a4371
    extract = tar
    extract_path = verible-v0.0-3426-gac4a37d8/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3426-gac4a37d8/verible-v0.0-3426-gac4a37d8-linux-static-x86_64.tar.gz
    sha256 = 7f159a3c9515db9077059aa0bba48d642c0a9700f0423395be96a4545c2a4371
    extract = tar
    extract_path = verible-v0.0-3426-gac4a37d8/bin/verible-verilog-format
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3426-gac4a37d8/verible-v0.0-3426-gac4a37d8-macOS.tar.gz
    sha256 = 53f00e16e55ed902aa0574b96326b7e86939d903e6c8e35a534884e0efa220b3
    extract = tar
    extract_path = verible-v0.0-3426-gac4a37d8-macOS/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3426-gac4a37d8/verible-v0.0-3426-gac4a37d8-macOS.tar.gz
    sha256 = 53f00e16e55ed902aa0574b96326b7e86939d903e6c8e35a534884e0efa220b3
    extract = tar
    extract_path = verible-v0.0-3426-gac4a37d8-macOS/bin/verible-verilog-format
    [verible-verilog-lint.exe]
    group = verible-verilog-lint
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3426-gac4a37d8/verible-v0.0-3426-gac4a37d8-win64.zip
    sha256 = 6cf4010496f73a75eabe5556b26724260dd1ec15f997b3b02b55d2e87a730ea6
    extract = zip
    extract_path = verible-v0.0-3426-gac4a37d8-win64/verible-verilog-lint.exe
    [verible-verilog-format.exe]
    group = verible-verilog-format
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3426-gac4a37d8/verible-v0.0-3426-gac4a37d8-win64.zip
    sha256 = 6cf4010496f73a75eabe5556b26724260dd1ec15f997b3b02b55d2e87a730ea6
    extract = zip
    extract_path = verible-v0.0-3426-gac4a37d8-win64/verible-verilog-format.exe
