[metadata]
name = verible_py
version = v0.0-3426
description = Python wrapper around invoking verible (https://chipsalliance.github.io/verible/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chipsalliance/verible
author = Henner Zeller
author_email = h.zeller@acm.org
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4007-g98bdb38a/verible-v0.0-4007-g98bdb38a-linux-static-x86_64.tar.gz
    sha256 = f34f5ff4b299ae7b4c8d64b7423d95250d5f54328ac98e32cdb0a0e7924d0d58
    extract = tar
    extract_path = verible-v0.0-4007-g98bdb38a/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4007-g98bdb38a/verible-v0.0-4007-g98bdb38a-linux-static-x86_64.tar.gz
    sha256 = f34f5ff4b299ae7b4c8d64b7423d95250d5f54328ac98e32cdb0a0e7924d0d58
    extract = tar
    extract_path = verible-v0.0-4007-g98bdb38a/bin/verible-verilog-format
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4007-g98bdb38a/verible-v0.0-4007-g98bdb38a-macOS.tar.gz
    sha256 = 60e1caeb23e0eaf98270a87e66a8922fe514c60448659df6b374b3abdb7d62b6
    extract = tar
    extract_path = verible-v0.0-4007-g98bdb38a-macOS/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4007-g98bdb38a/verible-v0.0-4007-g98bdb38a-macOS.tar.gz
    sha256 = 60e1caeb23e0eaf98270a87e66a8922fe514c60448659df6b374b3abdb7d62b6
    extract = tar
    extract_path = verible-v0.0-4007-g98bdb38a-macOS/bin/verible-verilog-format
    [verible-verilog-lint.exe]
    group = verible-verilog-lint
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4007-g98bdb38a/verible-v0.0-4007-g98bdb38a-win64.zip
    sha256 = 155db7a8cf2a73f2c5ac69f72fc8ad4f2613b3dc4b80f1e1de2f8f13fe7e5095
    extract = zip
    extract_path = verible-v0.0-4007-g98bdb38a-win64/verible-verilog-lint.exe
    [verible-verilog-format.exe]
    group = verible-verilog-format
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4007-g98bdb38a/verible-v0.0-4007-g98bdb38a-win64.zip
    sha256 = 155db7a8cf2a73f2c5ac69f72fc8ad4f2613b3dc4b80f1e1de2f8f13fe7e5095
    extract = zip
    extract_path = verible-v0.0-4007-g98bdb38a-win64/verible-verilog-format.exe
